--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "prettier": "3.2.4",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "tailwindcss": "3.4.1"
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "http://*/*"
     ],
     "permissions": [
-       "history"
+      "activeTab",
+      "scripting",
+      "storage"
     ]
   }
 }
